# pixel-chain-story

./: .env.example  .gitignore  AGENTS.md  CNAME  Dockerfile.tip  README.md  foundry.toml  llms.txt  package.json  railway.tip.toml  vite.config.ts
contracts/: MockUSDC.sol  PixelUsdcLock.sol  README.md  ULAOffchainMldsaGate.sol  ULAVerifier.sol
contracts/cosmwasm/ula-verifier/: Cargo.toml  README.md
contracts/cosmwasm/ula-verifier/src/: contract.rs  lib.rs  ots.rs
contracts/cosmwasm/ula-verifier/tests/: fixture.rs
docs/: ACCESS.md  AGENTS-SISO.md  AUDIT.md  BENCH.md  BILLBOARD.md  BOOTSTRAP.md  BRIDGE-STATUS.md  BUILDERS.md  CANONICAL-TIP.md  CONTINUITY-SISO.md  CONTRIBUTING.md  CUSTODY.md  DEVNET.md  DOORS.md  FOR-ETHEREUM-DEVS.md  INGRESS.md  INVENT.md  INVENTION.md  KINDLING.md  LOCK-FEEDER.md  LUMEN.md  ONE.md  PATH.md  QUANTUM.md  QUICKSTART.md  ROADMAP.md  SPEC.md  THREAT-MODEL.md  ULA-MLDSA.md  VALUE-SOVEREIGNTY-BRIDGE.md  WORLD-CANVAS.md  pixel-chain.md
fixtures/: ula-evm-v1.json
scripts/: access-selftest.ts  audit-scope-selftest.ts  bench-selftest.ts  bootstrap-selftest.ts  bridge-custody-selftest.ts  chaos-drill-selftest.ts  continuity-deepen-selftest.ts  continuity-ops-selftest.ts  continuity-order-selftest.ts  crypto-selftest.ts  election-selftest.ts  fault-selftest.ts  field-witness-selftest.ts  four-node-selftest.ts  gen-ula-evm-fixture.ts  kem-selftest.ts  kem-wire-selftest.ts  kindling-selftest.ts  l1-selftest.ts  light-client-selftest.ts  lock-feeder-selftest.ts  lumen-selftest.ts  mcflamingo-continuity-demo.ts  mldsa-selftest.ts  (+17 more)
(+94 files in other folders)
