[package]
name = "ula-verifier"
version = "0.1.0"
edition = "2021"
description = "Second-chain twin of ULAVerifier — PIX-HASH-OTS-128-KECCAK (CosmWasm-shaped)"
license = "MIT"
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Optional full CosmWasm entry points (needs newer Rust for latest cosmwasm-std).
cosmwasm = ["dep:cosmwasm-std", "dep:cosmwasm-schema"]

[dependencies]
sha3 = "=0.10.8"
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
hex = "=0.4.3"
cosmwasm-std = { version = "=1.5.11", optional = true, default-features = false }
cosmwasm-schema = { version = "=1.5.11", optional = true }

[dev-dependencies]
serde_json = "=1.0.128"
hex = "=0.4.3"
